# coursework-2

./: CMakeLists.txt  Makefile  README.md
src/: main.cpp
